<resources>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="NSCameraUsageDescription">This lets you take photos and record videos inside of Kik.</string>
    <string name="NSContactsUsageDescription">"Your phone contacts will be synced with Kik's servers so you can see who you know on Kik"</string>
    <string name="NSMicrophoneUsageDescription">This lets you record video with sound and make video calls.</string>
    <string name="NSPhotoLibraryAddUsageDescription">This lets you use photos saved to your phone to send in chats or set as your profile pic.</string>
    <string name="NSPhotoLibraryUsageDescription">This lets you use photos saved to your phone to send in chats or set as your profile pic.</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="Red">Red</string>
    <string name="Silver">Silver</string>
    <string name="White">White</string>
    <string name="_is_typing_">is typing...</string>
    <string name="_u_email_is_confirmed_u_">Email is Confirmed</string>
    <string name="_u_email_is_unconfirmed_u_">Email is Unconfirmed</string>
    <string name="abandon_masterpiece">Abandon Masterpiece</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abm_find_people_disable_caps">DISABLE</string>
    <string name="abm_find_people_done_caps">DONE</string>
    <string name="abm_find_people_has_number">Use your phone contacts to help you find your friends. Your information will be kept private and will not be shared</string>
    <string name="abm_find_people_info_view_line1">Invite your friends!</string>
    <string name="abm_find_people_info_view_line2">"We'll let you know when they sign up."</string>
    <string name="abm_find_people_matches_bar_multiple_matches">We found people you know</string>
    <string name="abm_find_people_matches_bar_no_matches">"Your friends aren't on Kik yet"</string>
    <string name="abm_find_people_matches_bar_no_new_friends">No new friends found</string>
    <string name="abm_find_people_matches_bar_one_match">We found someone you know</string>
    <string name="abm_find_people_matches_bar_view_all_caps">VIEW ALL</string>
    <string name="abm_find_people_search_header">Invite Friends to Kik</string>
    <string name="abm_friends_will_also_find_you">Your friends will also be able to find you</string>
    <string name="abm_friends_will_find_you">Your friends will be able to find you</string>
    <string name="abm_friends_wont_find_you">"Your friends won't be able to find you"</string>
    <string name="abm_matching_dialog_text">Upload your address book and contact info to tell you which of your friends already have Kik?</string>
    <string name="abm_opt_in_prompt">Use your phone contacts to find friends already on Kik.</string>
    <string name="abm_options_dialog_confirm_hint">"You will be able to find your friends but your friends won't be able to find you"</string>
    <string name="abm_options_dialog_hint">People who have your phone or email will be able to find you</string>
    <string name="abm_options_dialog_prompt">Allow friends to find me</string>
    <string name="abm_permission_body">To use Address Book Matching, you can enable this in settings App Permissions</string>
    <string name="abm_permission_cover_body">"We don't have access to your contacts. Change your settings so we can help you find your friends"</string>
    <string name="abm_permission_title">Kik Does Not Have Access to Your Contacts</string>
    <string name="abm_privacy_options_title">Privacy Options</string>
    <string name="about_copyright_text">Copyright © 2019 Kik Interactive Inc All rights reserved</string>
    <string name="about_copyright_text_extended">"Copyright © 2019 Kik Interactive Inc All rights reserved

Kik Interactive Inc
137 Glasgow Street
Unit 525 (Bay Area 5)
Kitchener, ON
Canada
N2G 4X8"</string>
    <string name="about_copyright_text_extended_link">"Copyright © 2019 Kik Interactive Inc All rights reserved

Kik Interactive Inc
137 Glasgow Street
Unit 525 (Bay Area 5)
Kitchener, ON
Canada
N2G 4X8

http://help.kik.com"</string>
    <string name="about_kik">About Kik</string>
    <string name="about_update_kik">Kik Version</string>
    <string name="account_change_configuration">Configuration</string>
    <string name="account_terminated">Account Terminated</string>
    <string name="account_terminated_error_text">"This account has been permanently deactivated for violating Kik's Terms of Service. kik.com/terms"</string>
    <string name="action_header">Action</string>
    <string name="activity_conversations_block_chat">Block</string>
    <string name="activity_conversations_block_report_chat">Block and Report</string>
    <string name="activity_conversations_chat_info">Info</string>
    <string name="activity_conversations_delete_chat">Delete</string>
    <string name="activity_conversations_leave_chat">Leave</string>
    <string name="block_list_description">"List of people you've blocked"</string>
    <string name="change_chat_bubble_color_summary">Change chat bubble color</string>
    <string name="change_led_color_summary">Change LED color, only colors supported by your phone will work</string>
    <string name="change_password">Change Password</string>
    <string name="enter_send_summary">Send messages when you hit enter</string>
    <string name="find_friends_caps">FIND FRIENDS</string>
    <string name="find_people_use_phone_contacts">Use Phone Contacts</string>
    <string name="find_your_friends_on_kik">Find Your Friends on Kik</string>
    <string name="invite_friend_from_phone_contacts_no_contacts_message">When you add contacts to your phone they will appear here</string>
    <string name="invite_friend_from_phone_contacts_no_contacts_title">No Phone Contacts Available</string>
    <string name="kinrecovery_confirm_password">Confirm Password</string>
    <string name="kinrecovery_create_password">Create Password</string>
    <string name="kinrecovery_create_password_description">"Create a strong password to backup your Kin
Password must include the following:
(9 characters, 1 upper case, 1 special character \"#,!,@\", 1 digit)"</string>
    <string name="kinrecovery_enter_password">Enter Password</string>
    <string name="kinrecovery_i_understand_password_description">"I understand this password is required to restore
my Kin and it can't be recovered if lost."</string>
    <string name="kinrecovery_next">Next</string>
    <string name="let_friends_find_me">Let Friends Find Me</string>
    <string name="no_conversations_sync_contacts">Sync your contacts to find people you know</string>
    <string name="people_will_find_me">People with my phone or email may be able to find me</string>
    <string name="play_sound_on_new_message">Play a sound when a new message is received</string>
    <string name="registration_phone_placeholder">Phone (Recommended)</string>
    <string name="result_empty_text">No results</string>
    <string name="settings_auto_download_videos">Auto Download Videos</string>
    <string name="settings_automatic_fullscreen_summary">"While video chatting, you'll be automatically switched to fullscreen when 2 or more people are live"</string>
    <string name="settings_automatic_fullscreen_title">Fullscreen Video Chat</string>
    <string name="settings_autoplay_videos">Auto Play Videos</string>
    <string name="settings_autoplay_videos_blurb">Kik may automatically download and play certain videos that are less than 1MB in size</string>
    <string name="settings_bubble_color">Chat Bubble Color</string>
    <string name="sync_contacts_to_find_friends">Your phone contacts will be continuously synced to find your friends</string>
    <string name="syncing_contacts_title">Syncing Contacts...</string>
    <string name="title_block_list">Block List</string>
    <string name="title_chat_settings">Chat Settings</string>
    <string name="title_community_guidelines">Community Standards</string>
    <string name="title_copyright">Legal</string>
    <string name="title_developers">Developers</string>
    <string name="title_email">Email</string>
    <string name="title_enter_key_send">Enter Key Send</string>
    <string name="title_help">Help</string>
    <string name="title_help_about_us">Help &amp; About Us</string>
    <string name="title_in_app_alerts">In-app Alerts</string>
    <string name="title_kik_username">Your Kik Username</string>
    <string name="title_kin_wallet">KIN Wallet Preview</string>
    <string name="title_led_color">LED Color</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_logout">Log Out</string>
    <string name="title_name">Name</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_sound">Sound</string>
    <string name="title_terms_of_service">Terms of Service</string>
    <string name="title_vibration">Vibration</string>
    <string name="title_you_have_no_chats_yet">You have no chats yet</string>
    <string name="title_your_account_info">Your Account</string>
    <string name="title_your_web_history">Your Web History</string>
    <string name="use_phone_contacts_find_friends_v2">Your phone contacts will be continuously synced so you can see who you know on Kik</string>
    <string name="vibrate_on_new_message">Vibrate when a new message is received</string>
    <string name="web_kik_community_guidelines">http://kik.com/standards</string>
    <string name="web_kik_support">http://kik.com/support.php</string>
    <string name="wifi_and_cellular">Wi-Fi and Cellular</string>
    <string name="your_code">Your Kik Code</string>
</resources>