<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/abm_empty_list_no_phone_contacts_container" android:layout_width="230.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip">
        <kik.android.widget.RobotoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invite_friend_from_phone_contacts_no_contacts_title" style="@style/KikTextView.EmptyState.Title" />
        <kik.android.widget.RobotoTextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/invite_friend_from_phone_contacts_no_contacts_message" style="@style/KikTextView.EmptyState.Description" />
    </LinearLayout>
    <TextView android:gravity="center" android:id="@id/abm_empty_list_cell_text" android:paddingTop="@dimen/contacts_list_item_height" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/result_empty_text" style="@style/KikTextView.EmptyState.Title" />
</FrameLayout>