<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/kinrecovery_bluePrimary" android:id="@id/create_password_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kinrecovery_margin_large" android:text="@string/kinrecovery_create_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/KinrecoveryTitleLargeLight" />
    <TextView android:gravity="center" android:id="@id/password_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/kinrecovery_margin_main" android:layout_marginTop="@dimen/kinrecovery_margin_medium" android:layout_marginRight="@dimen/kinrecovery_margin_block" android:text="@string/kinrecovery_create_password_description" android:lineSpacingExtra="@dimen/kinrecovery_line_spacing" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/create_password_title" style="@style/KinrecoveryTitleGray" />
    <com.kin.ecosystem.recovery.widget.PasswordEditText android:id="@id/enter_pass_edittext" android:layout_width="@dimen/kinrecovery_btn_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kinrecovery_margin_large" app:kinrecovery_hint="@string/kinrecovery_enter_password" app:kinrecovery_show_reveal_icon="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/password_description" />
    <com.kin.ecosystem.recovery.widget.PasswordEditText android:id="@id/confirm_pass_edittext" android:layout_width="@dimen/kinrecovery_btn_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kinrecovery_edittext_margin" app:kinrecovery_hint="@string/kinrecovery_confirm_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/enter_pass_edittext" />
    <CheckBox android:theme="@style/KinrecoveryCheckBox" android:textColorHighlight="@color/kinrecovery_bluePrimary" android:gravity="top" android:id="@id/understand_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kinrecovery_margin_medium" app:layout_constraintStart_toStartOf="@id/confirm_pass_edittext" app:layout_constraintTop_toBottomOf="@id/confirm_pass_edittext" />
    <TextView android:id="@id/understand_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/kinrecovery_text_align_top_checkbox_margin" android:text="@string/kinrecovery_i_understand_password_description" android:lineSpacingExtra="3.0dip" app:layout_constraintStart_toEndOf="@id/understand_checkbox" app:layout_constraintTop_toTopOf="@id/understand_checkbox" style="@style/KinrecoveryTitleSmall" />
    <Button android:enabled="false" android:textSize="@dimen/kinrecovery_btn_text_size" android:id="@id/next_button" android:background="@drawable/kinrecovery_btn_rounded_blue_solid" android:layout_width="@dimen/kinrecovery_btn_width" android:layout_height="@dimen/kinrecovery_btn_frame_height" android:layout_marginBottom="@dimen/button_margin_bottom" android:text="@string/kinrecovery_next" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/KinrecoveryTitleLarge" />
</android.support.constraint.ConstraintLayout>