<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_gravity="top" android:layout_width="fill_parent" android:layout_height="@dimen/abm_matches_bar_height" android:layout_marginBottom="-1.0dip" layout="@layout/abm_matches_bar" />
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/opted_out_big_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:src="@drawable/img_abm_large_logo" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/opted_in_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="21.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="21.0dip">
        <ImageView android:id="@id/opted_in_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_abm_opt_in_helper" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <kik.android.widget.RobotoTextView android:textSize="@dimen/abm_opt_in_hint_text_size_opted_in" android:textColor="@color/text_primary" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/abm_find_people_info_view_line1" />
            <kik.android.widget.RobotoTextView android:textSize="@dimen/abm_opt_in_hint_text_size_opted_in" android:textColor="@color/text_primary" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/abm_find_people_info_view_line2" android:maxLines="3" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/abm_progress_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip">
        <ProgressBar android:id="@id/abm_sync_progress" android:layout_width="188.0dip" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:indeterminate="true" style="@style/Kik.Widget.ProgressBar.Horizontal" />
        <kik.android.widget.RobotoTextView android:textSize="15.0sp" android:textColor="@color/text_secondary" android:gravity="center" android:id="@id/abm_progress_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/syncing_contacts_title" android:maxLines="1" />
    </LinearLayout>
    <kik.android.widget.RobotoTextView android:gravity="center" android:id="@id/abm_opted_out_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="8.0dip" android:text="@string/find_your_friends_on_kik" style="@style/KikTextView.Dialog.Title" />
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/abm_opted_out_big_device_phone_number_image" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="16.0dip" android:src="@drawable/abm_large_device_logo" />
    <kik.android.widget.RobotoTextView android:gravity="center" android:id="@id/abm_opted_out_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:layout_marginBottom="16.0dip" android:text="@string/use_phone_contacts_find_friends_v2" android:maxLines="3" style="@style/KikTextView.Dialog.Message" />
    <kik.android.chat.view.ValidateableInputView android:gravity="center" android:id="@id/abm_phone_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:hint="@string/registration_phone_placeholder" android:inputType="phone" />
    <Button android:id="@id/sync_contacts_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_marginBottom="8.0dip" android:text="@string/find_friends_caps" style="@style/KikButton.Hero" />
</merge>