<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/conversations_empty_sync_contacts_view_0" android:background="@color/conversations_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
        <kik.android.widget.RobotoTextView android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/title_you_have_no_chats_yet" style="@style/KikTextView.EmptyState.Title" />
        <kik.android.widget.RobotoTextView android:gravity="center" android:id="@id/textview_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/no_conversations_sync_contacts" style="@style/KikTextView.EmptyState.Description" />
        <Button android:id="@id/button_find_friends" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/find_friends_caps" style="@style/KikButton.Classic.Bordered" />
    </LinearLayout>
</FrameLayout>